2014-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el (gnutls-negotiate): Don't use cl-mapcan; pass
	correct data to `gnutls-boot' (Bug#18664).
	Reported by Toke Høiland-Jørgensen <toke@toke.dk>.

2014-10-18  Michal Nazarewicz  <mina86@mina86.com>

	* whitespace.el (whitespace-style, whitespace-big-indent)
	(whitespace-big-indent-regexp, whitespace-style-value-list)
	(whitespace-toggle-option-alist, whitespace-interactive-char)
	(whitespace-toggle-options)
	(global-whitespace-toggle-options, whitespace-help-text)
	(whitespace-style-face-p, whitespace-color-on): Add a 'big-indent
	style to `whitespace-mode' to indicate that the line indentation
	is too deep.  By default, 32 SPACEs or four TABs are considered
	too many but `whitespace-big-indent-regexp' can be configured.

2014-10-17  Michal Nazarewicz  <mina86@mina86.com>

	* textmodes/tildify.el (tildify--pick-alist-entry): rename from
	tildify-mode-alist.

2014-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio.el: Use lexical-binding drop non-GV fallback.
	(defclass, defgeneric, defmethod): Add doc-string position.
	(with-slots): Require cl-lib.

	* emacs-lisp/eieio-core.el: Use lexical-binding and cl-lib.
	(list-of): New type.
	(eieio--typep): Remove.
	(eieio-perform-slot-validation): Use cl-typep instead.

	* emacs-lisp/eieio-base.el: Use lexical-binding and cl-lib.

	* emacs-lisp/cl-macs.el (cl--make-type-test): Avoid ((lambda ..) ..).

2014-10-16  Alan Mackenzie  <acm@muc.de>

	Trigger showing when point is in the "periphery" of a line or just
	inside a paren.
	* paren.el (show-paren-style, show-paren-delay)
	(show-paren-priority, show-paren-ring-bell-on-mismatch):
	Remove superfluous :group specifications.
	(show-paren-when-point-inside-paren)
	(show-paren-when-point-in-periphery): New customizable variables.
	(show-paren-highlight-openparen): Make into a defcustom.
	(show-paren--unescaped-p, show-paren--categorize-paren)
	(show-paren--locate-near-paren): New defuns.